--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,4 @@
 {
-  
   "name": "client",
   "private": true,
   "version": "0.0.0",
@@ -11,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "animate.css": "^4.1.1",
     "framer-motion": "^10.16.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
